--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "typecheck": "tsc --noEmit",
     "test": "vitest",
     "prepare": "husky"
+  },
+  "engines": {
+    "node": ">=20 <23",
+    "pnpm": ">=9"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
